fix: Extra fixes on mobile layout (padding is better than margin, reason: doesn't overflow the page)

--- a/components/sections/Village/Village.module.scss
+++ b/components/sections/Village/Village.module.scss
@@ -1,5 +1,5 @@
 .image {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 500px;
   background-image: url(/lang_nghe.jpg);
