--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 
 .slider-container {
   position: relative;
-  bottom: -25%; /* Align at the bottom */
+  margin-top: 60px;
   width: 100%; /* Adjust width as needed */
   height: 600px;
 }
